# OpenCLDemo

./: README.md
app/: build.gradle
app/src/androidTest/java/com/cscao/apps/opencldemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  OpenCLDemo.cpp  OpenCLDemo.h  libopencl.c  openCLNR.cpp  openCLNR.h  refNR.cpp  refNR.h
app/src/main/cpp/include/CL/: cl.hpp
app/src/main/java/com/cscao/apps/opencldemo/: OpenCLActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/cscao/apps/opencldemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
